<resources>
    <string name="app_name">Shout</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Please enter the name and password you wish to use</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="clicktoregister">No account? Click here to register</string>
    <string name="incorrect_login_details">Incorrect login details entered.  Please check your name and password and try again.</string>
    <string name="tooltip_passwords_dont_match">Passwords do not match.  Please make sure your passwords are matching.</string>
    <string name="tooltip_email_already_used">This email is already in use.  Please Sign up with a new account.</string>
    <string name="send">Send</string>
    <string name="post">Post</string>
    <string name="title_activity_comment">CommentActivity</string>
</resources>